# ClawBio

./: .gitignore  CLAUDE.md  README.md  clawbio.py  index.html  pyproject.toml  pytest.ini
bot/: roboterri.py
clawbio/common/: __init__.py  sarek.py  vcf_qc.py
clawbio/common/tests/: test_reproducibility.py
clawbio/tests/: test_runner.py
docs/: CLAWBIO-BRIEF.md
scripts/: generate_catalog.py
skills/: catalog.json
skills/bioqc-mcp/: SKILL.md  bioqc_mcp.py
skills/bioqc-mcp/tests/: test_bioqc_mcp.py
skills/crispr-screen-triage/: SKILL.md
skills/eqtl-catalogue-region-fetch/: SKILL.md
skills/flow-bio/: SKILL.md
skills/ld-1000g-region-compute/: SKILL.md  environment.yml  ld_1000g_region_compute.py  ondemand_client.py
skills/ld-1000g-region-compute/examples/: expected_output.md  run_example.sh
skills/ld-1000g-region-compute/tests/: conftest.py  test_ld_1000g_region_compute.py  test_live_ld_1000g_region_compute.py
skills/locuscompare-region-render/: SKILL.md  locuscompare_region_render.py
skills/locuscompare-region-render/_fetchers/: gencode_ondemand.py
