[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "clawbio"
version = "0.5.1"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.82",
    "conda-lock>=2.0",
    "google-auth>=2,<3",
    "google-cloud-bigquery>=3,<4",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openai>=1.0",
    "pandas>=2.0",
    "pydeseq2>=0.4",
    "rocrate>=0.15.0",
    "scikit-learn>=1.3",
]
